# aws-codepipeline-discord-notifications

./: .gitignore  .pre-commit-config.yaml  README.md  index.py  notifications.py  pyproject.toml
terraform/: cloudwatch.tf  iam.tf  lambda.tf  sqs.tf  variables.tf
tests/: conftest.py  test_notifications.py
tests/sample_events/: codepipeline-action-execution-state-change.json  codepipeline-pipeline-execution-state-change.json  codepipeline-stage-execution-state-change.json
